--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 </head>
 
 <body>
-    <div class="tt">
+    <div class="header-contain">
         <header>
-            <div class="test2">
+            <div class="header-1">
                 <img src="./image/panda-market-logo.png" alt="">
                 <a href="./dir/login.html" class="button button-def">로그인</a>
             </div>
         </header>
     </div>
 
-    <section class="sec1">
-        <div class="sec2">
-            <div class="box1">
-                <div class="text1">
-                    일상의 모든 물건을<br /> 거래해 보세요
+    <section class="main1">
+        <div class="main1-contain">
+            <div class="main1-text-contain">
+                <div class="main1-text">
+                    일상의 모든 물건을 <br />거래해 보세요
                 </div>
                 <a href="./dir/item.html" class="button button-alt">구경하러 가기</a>
             </div>
@@ -42,35 +42,35 @@
         </div>
     </section>
 
-    <section class="sec3">
-        <div class="box2">
+    <section class="main2">
+        <div class="main2-contain">
             <img src="./image/두번째 섹터.png" alt="">
 
-            <div class="box3">
-                <div class="box4">
+            <div class="main2-text-contain">
+                <div class="main2-text1">
                     Hot item
                 </div>
-                <div class="box5">
-                    인기 상품을<br /> 확인해 보세요
+                <div class="main2-text2">
+                    인기 상품을 <br />확인해 보세요
                 </div>
-                <div class="box6">
-                    가장 HOT한 중고거래 물품을<br /> 판다 마켓에서 확인해 보세요
+                <div class="main2-text3">
+                    가장 HOT한 중고거래 물품을 <br />판다 마켓에서 확인해 보세요
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="sec4">
-        <div class="box7">
-            <div class="box8">
-                <div class="box9">
+    <section class="main3">
+        <div class="main3-contain">
+            <div class="main3-text-contain">
+                <div class="main3-text1">
                     Search
                 </div>
 
-                <div class="box10">
+                <div class="main3-text2">
                     구매를 원하는<br /> 상품을 검색하세요
                 </div>
-                <div class="box11">
+                <div class="main3-text3">
                     구매하고 싶은 물품은 검색해서<br />쉽게 찾아보세요
                 </div>
             </div>
@@ -78,30 +78,30 @@
         </div>
     </section>
 
-    <section class="sec5">
-        <div class="box33">
+    <section class="main4">
+        <div class="main4-contain">
             <img src="./image/네번째섹터.png" alt="">
-            <div class="box12">
-                <div class="box13">
+            <div class="main4-text-contain">
+                <div class="main4-text1">
                     Register
                 </div>
 
-                <div class="box14">
+                <div class="main4-text2">
                     판매를 원하는<br /> 상품을 등록하세요
                 </div>
 
-                <div class="box15">
-                    어떤 물건이든 판매하고 싶은 상품을<br /> 쉽게 등록하세요
+                <div class="main4-text3">
+                    어떤 물건이든 판매하고 싶은 상품을<br />쉽게 등록하세요
                 </div>
             </div>
 
         </div>
     </section>
 
-    <section class="sec6">
-        <div class="box16">
-            <div class="box17">
-                <div class="box18">
+    <section class="main5">
+        <div class="main5-contain">
+            <div class="main5-text-contain">
+                <div class="main5-text">
                     믿을 수 있는<br /> 판다마켓 중고 거래
                 </div>
             </div>
@@ -110,21 +110,21 @@
     </section>
 
     <footer>
-        <box class="box19">
-            <div class="box20">
+        <box class="footer-box">
+            <div class="footer-box-inner1">
                 ©codeit - 2024
             </div>
 
-            <div class="box21">
+            <div class="footer-box-inner2">
                 <div>
-                    <a class="box23" href="./dir/privacy.html">Privacy Policy</a>
+                    <a class="footer-box-inner2-1" href="./dir/privacy.html">Privacy Policy</a>
                 </div>
                 <div>
-                    <a class="box24" href="./dir/faq.html">FAQ</a>
+                    <a class="footer-box-inner2-2" href="./dir/faq.html">FAQ</a>
                 </div>
             </div>
 
-            <div class="box22">
+            <div class="footer-box-inner3">
                 <a href="https://www.facebook.com" target="_blank" title="Facebook">
                     <img class="icon" src="./icon/facebook-logo.svg" alt="Facebook">
                 </a>
