# 스프린트 미션 3 작업 1. Googl1 Analytics 적용 2. 요구사항 대로 '판다 마켓' -> '판다마켓' 변경 3. 요구사항 대로 폴더삭제 후 *.html 파일 root 디렉토리에 생성 4. styles 폴더에 스타일 파일 분리 적용. 5. 참고 주석 삭제 처리 6. 스프린트 미션 3 기능 적용

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 기본 양식 생성 후, 제목을 수정하고 해당 페이지에 적용할 파비콘 및 스타일시트를 추가해 주세요. -->
-    <title>판다마켓 - 로그인</title>
+    <title>판다마켓 - FAQ</title>
     <link rel="icon" href="../images/logo/favicon.ico" />
     <link
       rel="stylesheet"
@@ -18,10 +18,7 @@
 
   <body>
     <h1 style="text-align: center;">
-      여기는 LOGIN 메인화면의 
-      login 버튼 클릭시 
-      정상 진입한 화면입니다.
+      임시 FAQ 페이지
     </h1>
-  
   </body>
 </html>
