--- a/items.html
+++ b/items.html
@@ -28,6 +28,8 @@
   </head>
 
   <body>
-    <h1>임시 상품 리스트 페이지</h1>
+    <h1 style="text-align: center;">
+      임시 상품 리스트 페이지
+    </h1>
   </body>
 </html>
