--- a/pages/auth/login/login.html
+++ b/pages/auth/login/login.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="../../../styles/reset.css" />
     <link rel="stylesheet" href="../../../styles/common.css" />
     <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../../../common/css/modal.css" />
+    <script
+      defer
+      type="module"
+      src="../../../common/js/form-validation.js"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../../common/js/password-visibility.js"
+    ></script>
   </head>
   <body>
     <main>
@@ -22,15 +33,18 @@
         </a>
       </div>
       <!-- 로그인 폼 -->
-      <form action="">
+      <form action="/" id="form">
         <div class="form-email">
           <label for="email">이메일</label>
-          <input
-            type="text"
-            id="email"
-            name="email"
-            placeholder="이메일을 입력해주세요"
-          />
+          <div>
+            <input
+              type="text"
+              id="email"
+              name="email"
+              placeholder="이메일을 입력해주세요"
+            />
+            <div class="error"></div>
+          </div>
         </div>
         <div class="form-password">
           <label for="password">비밀번호</label>
@@ -38,16 +52,21 @@
             <input
               type="password"
               id="password"
+              class="password-field"
               name="password"
               placeholder="비밀번호를 입력해주세요"
             />
             <img
+              class="password-visibility-image"
               src="../../../assets/images/auth/btn_visibility_off_24px.svg"
               alt="btn_visibility_off"
             />
+            <div class="error"></div>
           </div>
         </div>
-        <button class="form-button" type="submit">로그인</button>
+        <button id="form-button" class="form-button" type="submit" disabled>
+          로그인
+        </button>
       </form>
       <!-- 간편 로그인 -->
       <div class="sns-container">
@@ -72,6 +91,11 @@
         <p>판다마켓이 처음이신가요?</p>
         <a href="../signup/signup.html">회원가입</a>
       </div>
+      <!-- 모달 -->
+      <dialog id="error-message-modal" class="error-message-modal">
+        <p>비밀번호가 일치하지 않습니다.</p>
+        <button class="close-modal-button">확인</button>
+      </dialog>
     </main>
   </body>
 </html>
