--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     </title>
     <link rel="stylesheet" href="./css/style.css">
 
+    <meta property="og:title" content="판다마켓">
+    <meta property="og:description" content="일상에서 모든 물건을 거래해보세요">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://celebrated-axolotl-089cd1.netlify.app/index.html">
+    <meta property="og:image" content="https://celebrated-axolotl-089cd1.netlify.app/image/sprint2_로고.png">
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VY9YG74E74"></script>
     <script>
