feat: index 페이지 미디어 쿼리 적용

--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
     <section class="banner">
       <figure class="banner-container">
         <div class="banner-content">
-          <h1 class="banner-title">
-            일상의 모든 물건을 <br />
-            거래해 보세요
-          </h1>
+          <h1 class="banner-title">일상의 모든 물건을 거래해 보세요</h1>
           <button
             class="banner-button"
             onclick="window.location.href='items.html'"
@@ -77,10 +74,8 @@
           />
           <div class="item-content">
             <strong class="strong">Hot item</strong>
-            <h2 class="item-title">
-              인기 상품을
-              <br />
-              확인해 보세요
+            <h2 class="item-title first-item-title">
+              인기 상품을 확인해 보세요
             </h2>
             <h3 class="item-subtitle">
               가장 HOT한 중고거래 물품을
@@ -100,11 +95,7 @@
           />
           <div class="item-content">
             <strong class="strong">Search</strong>
-            <h2 class="item-title">
-              구매를 원하는
-              <br />
-              상품을 검색하세요
-            </h2>
+            <h2 class="item-title">구매를 원하는 상품을 검색하세요</h2>
             <h3 class="item-subtitle">
               구매하고 싶은 물품은 검색해서
               <br />
@@ -123,11 +114,7 @@
           />
           <div class="item-content">
             <strong class="strong">Register</strong>
-            <h2 class="item-title">
-              판매를 원하는
-              <br />
-              상품을 등록하세요
-            </h2>
+            <h2 class="item-title">판매를 원하는 상품을 등록하세요</h2>
             <h3 class="item-subtitle">
               어떤 물건이든 판매하고 싶은 상품을
               <br />
@@ -206,6 +193,57 @@
             />
           </a>
         </div>
+      </div>
+      <div class="mobile-footer-container">
+        <div>
+          <div class="footer-info">
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="faq.html">FAQ</a>
+          </div>
+          <div class="footer-social">
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/images/social/facebook-logo.svg"
+                alt="facebook-logo"
+              />
+            </a>
+            <a
+              href="https://twitter.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/images/social/twitter-logo.svg"
+                alt="twitter-logo"
+              />
+            </a>
+            <a
+              href="https://www.youtube.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/images/social/youtube-logo.svg"
+                alt="youtube-logo"
+              />
+            </a>
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/images/social/instagram-logo.svg"
+                alt="instagram-logo"
+              />
+            </a>
+          </div>
+        </div>
+        <p>©codeit - 2024</p>
       </div>
     </footer>
   </body>
