feat: index 페이지 Open Graph 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="판다마켓" />
+    <meta
+      property="og:description"
+      content="일상에서 모든 물건을 거래해보세요"
+    />
+    <meta
+      property="og:url"
+      content="https://daewon-panda-market.netlify.app/"
+    />
+    <meta property="og:image" content="assets/images/logo/favicon.ico" />
+    <meta property="og:type" content="website" />
     <title>판다 마켓</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/common.css" />
