style: 로그인 페이지 모바일 뷰 max-width 값 추가

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       property="og:url"
       content="https://daewon-panda-market.netlify.app/"
     />
-    <meta property="og:image" content="assets/images/logo/favicon.ico" />
+    <meta
+      property="og:image"
+      content="https://daewon-panda-market.netlify.app/assets/images/logo/panda-market-logo.png"
+    />
     <meta property="og:type" content="website" />
     <title>판다 마켓</title>
     <link rel="stylesheet" href="styles/reset.css" />
