♻️ Refactor validation.js
데이터와 액션과 연산을 용도에 맞게 모듈화하였습니다.

--- a/login/index.html
+++ b/login/index.html
@@ -50,6 +50,6 @@
         </section>
       </main>
     </div>
-    <script src="/scripts/validation.js"></script>
+    <script type="module" src="/scripts/validation.js"></script>
   </body>
 </html>
