--- a/index.html
+++ b/index.html
@@ -130,5 +130,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="js/api.mjs"></script>
   </body>
 </html>
