feat: 스프린트 미션 4 시작 - ArticleService.js 작성

--- a/apis/main.html
+++ b/apis/main.html
@@ -13,22 +13,27 @@
       font-size: 18px;
     }
 
+    input {
+      border: none;
+      border-bottom: 1px solid black;
+    }
+
     h1 {
       color: transparent;
-      text-shadow: 5px 4px 1px mediumslateblue;
+      text-shadow: 5px 4px 1px rosybrown;
       -webkit-text-stroke-color: rgba(0, 0, 0, 0.7);
       -webkit-text-stroke-width: 3px;
       font-size: 4rem;
     }
 
     mark {
-      padding: 0.5rem;
-      border-radius: 0.5rem;
+      padding: 0.5rem 1rem;
+      border-radius: 100%;
       margin-right: 0.5rem;
     }
 
     mark[data-color="GET"] {
-      background-color: pink
+      background-color: lightpink
     }
 
     mark[data-color="POST"] {
