로그인 페이지 기본 요구사항 구현

--- a/login/index.html
+++ b/login/index.html
@@ -29,13 +29,14 @@
       <div class="inputPassword">
         <h1 class="text">비밀번호</h1>
         <label for="box1"></label>
-          <input class="box" id="box1" type="password" name="password" placeholder="비밀번호를 입력해주세요" />
-          <img src="/img/btn_visibility_on_24px.png" />
+        <input class="box" id="box1" type="password" name="password" placeholder="비밀번호를 입력해주세요" />
+        <img src="/img/btn_visibility_on_24px.png" />
       </div>
 
-      <div class="loginButtn">
-        로그인
-      </div>
+        <button class="loginButton" style = "cursor: pointer">
+          로그인
+        </button>
+
       <div class="simpleLogin">
         <div class="simpleContentBox">
           <div class="text">간편 로그인하기</div>
