--- a/signup/index.html
+++ b/signup/index.html
@@ -55,9 +55,9 @@
         </div>
       </div>
 
-      <div class="loginButtn">
+      <button class="loginButtn">
         회원가입
-      </div>
+      </button>
       <div class="simpleLogin">
         <div class="simpleContentBox">
           <div class="text">간편 로그인하기</div>
