--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="module" src="js/api.mjs"></script>
+    <script type="module" src="js/articleService.mjs"></script>
+    <script type="module" src="js/productService.mjs"></script>
   </body>
 </html>
