feat: 로그인버튼 클릭 시 페이지 이동 기능

--- a/signup.html
+++ b/signup.html
@@ -37,17 +37,20 @@
             <label class="text-label">이메일</label>
             <input type="text" class="input-id" id="id" placeholder="이메일을 입력해주세요" autocomplete="off">
             <button type="button" class="clear-btn" id="clear-btn-id" style="display: none">X</button>
+            <label class="label-alert" id="label-alert-id" style="display: inline"></label>
           </div>
           <div class="input-item nick">
             <label class="text-label">닉네임</label>
             <input type="text" class="input-id" id="nick" placeholder="닉네임을 입력해주세요" autocomplete="off">
             <button type="button" class="clear-btn" id="clear-btn-nick" style="display: none">X</button>
+            <label class="label-alert" id="label-alert-nick" style="display: inline"></label>
           </div>
           <div class="input-item pw">
             <label class="text-label">비밀번호</label>
             <input type="password" class="input-pw" id="pw1" placeholder="비밀번호를 입력해주세요" autocomplete="off">
             <button type="button" class="show-pw" id="show-pw1" style="display: none"></button>
             <button type="button" class="clear-btn" id="clear-btn-pw1" style="display: none">X</button>
+            <label class="label-alert" id="label-alert-pw" style="display: inline"></label>
           </div>
           <div class="input-item pw">
             <label class="text-label">비밀번호 확인</label>
@@ -56,6 +59,7 @@
             <input type="password" class="input-pw" id="pw2" placeholder="비밀번호를 다시 한 번 입력해주세요" autocomplete="off">
             <button type="button" class="show-pw" id="show-pw2" style="display: none"></button>
             <button type="button" class="clear-btn" id="clear-btn-pw2" style="display: none">X</button>
+            <label class="label-alert" id="label-alert-pw" style="display: inline"></label>
           </div>
           <button type="submit" class="btn-signup">회원가입</button>
         </div>
