회원가입 기본 요구 사항 구현

--- a/login/index.html
+++ b/login/index.html
@@ -23,7 +23,7 @@
       <div class="inputEmail">
         <h1 class="text">이메일</h1>
         <label for="box"></label>
-        <input class="box" id="box" type="email" name="email" placeholder="이메일을 입력해주세요" />
+        <input class="box" id="" type="email" name="email" placeholder="이메일을 입력해주세요" />
       </div>
 
       <div class="inputPassword">
