--- a/signup/index.html
+++ b/signup/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="contentBox">
-      
+
       <div class="inputEmail">
         <h1 class="text">이메일</h1>
         <div class="emailBox">
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <button class="loginButtn">
+      <button class="signupButton">
         회원가입
       </button>
       <div class="simpleLogin">
