--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <form id="forms" data-label="이메일_비밀번호_로그인"></form>
       </div>
     </main>
-    <script src="js/form.js"></script>
-    <script src="js/login.js"></script>
+    <script src="./js/form.js"></script>
+    <script type="module" src="./js/login.js"></script>
   </body>
 </html>
