--- a/apis/demo.html
+++ b/apis/demo.html
@@ -8,6 +8,8 @@
 <body>
   <!-- TODO: Read Script Async and Defer https://ko.javascript.info/script-async-defer -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jose/5.9.3/index.umd.min.js" integrity="sha512-NR1vwgpSWA9fiaSXKleJp6CHvFn2W+6sGJ0JWwYEvwGt0bzovzNMWz8cslnbOWfKYP5ZKde6j2fEWOB6hH8Pfw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="module" src="/apis/main.js"></script>
 </body>
 </html>
