fix: 로그인 페이지 텝 인덱스 수정

--- a/login.html
+++ b/login.html
@@ -70,9 +70,9 @@
     <div class="modal-content" id="modalContent">
       <h2 class="sr-only">확인창</h2>
       <p>비밀번호가 일치하지 않습니다.</p>
-      <span class="modal-button" id="modalButton">확인</span>
+      <span class="modal-button" id="modalButton" tabindex="1">확인</span>
     </div>
-    <script src="scripts/login.js"></script>
+    <script type="module" src="scripts/login.js"></script>
 </body>
 
 </html>
