모듈창 구현 및, 로그인 기능 수정

--- a/login/index.html
+++ b/login/index.html
@@ -11,7 +11,7 @@
   <title>판다마켓 로그인</title>
 </head>
 
-<body>
+<body id="body">
   <div class="content">
     <div class="imgbox">
       <a href="../index.html">
@@ -54,11 +54,7 @@
         판다마켓이 처음이신가요? <a href="/signup">회원가입</a>
       </div>
     </div>
-
   </div>
-  <script src="/login/index.js"></script>
+  <script id='script' type=""module" src="/login/index.js"></script>
 </body>
-
-
-
 </html>
