--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>판다마켓 | FAQ</title>
+  <meta property="og:title" content="판다마켓">
+  <meta property="og:description" content="일상에서 모든 물건을 거래해보세요">
+  <meta property="og:url" content="https://yousuk-sprint.netlify.app/">
+  <meta property="og:image" content="https://yousuk-sprint.netlify.app/assets/og-image.jpg">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
